# CEIA-IIA

./: README.md  pyproject.toml  tp1.ipynb
.ipynb_checkpoints/: tp1-checkpoint.ipynb
TP1/: pyproject.toml  tp1.ipynb
TP2/: California_Modelo_Ridge.pkl  README.md  pyproject.toml  tp2.ipynb
TP2/results/: linear_model.pkl  ridge_model.pkl
TP3/: README.md  tp3.ipynb
