[tool.poetry]
name = "tp1_TorresHanoi"
version = "0.1.0"
description = "Resolucion del problema de las torres de Hanoi"
authors = ["Martin Brocca <martinbrocca@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,^3.13"  # LTS stability, update to 3.13 if desired
numpy = ">1.27.0"
pandas = "^2.2.3"
scipy = "^1.14.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
pygame = "^2.5.2"
#vizdoom = ">1.2.3"
pyarrow = ">17.0.0"
jupyterlab = "^4.3.0"  # Includes Jupyter Notebook functionality

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"